# metamuses

./: .gitignore  README.md
.github/: README.md
.github/workflows/: ci-api.yml  deploy-api-production.yml  health-check-api.yml  rollback-api.yml
contracts/: .env.example  deploy.sh  foundry.toml
contracts/script/: AdminMint.s.sol  DeployMuseAI.s.sol  DeployMuseAICompanionFactory.s.sol  DeployMuseAIGasless.s.sol  DeployPluginMarketplace.s.sol  DeployTipJar.s.sol
contracts/src/: AccessControl.sol  DATMarketplace.sol  MuseAI.sol  MusePlugins.sol  PluginMarketplace.sol  TipJar.sol
contracts/src/companions/: IMuseAICompanion.sol  MuseAICompanion.sol  MuseAICompanionFactory.sol
contracts/src/interfaces/: IPluginMarketplace.sol
contracts/test/: MuseAI.t.sol  MuseAICompanion.t.sol  PluginMarketplace.t.sol
metamuses-api/: .dockerignore  .env.example  .env.production.example  Cargo.toml  README.md  build.sh
metamuses-api/.github/: README.md
metamuses-api/.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  health-check.yml  rollback.yml
metamuses-api/.sqlx/: query-0991cc2f34f82509e04abcfd1e476f52a612cf6f38d36e98f3a5c4878364e716.json  query-2e650f8121429a0234bed49d449f9ae0d7be3ca05cbfc964829011d1321568b1.json  query-3239ca7bae7432099de5d76cb13d05b1d91a5a03bc1bc9925a7f92e3a982359a.json  query-32ea2a7a1b22d5057420d5094a6b6a964b3cafe8e9c9a3832e86aab7af0f6eec.json  query-38620c9ddfaad9d73630df72bd9cb77febdc6462882453ecffff8ff3c698b225.json  query-3a6b634682bb2fa5521937f6f7149e854805ab3b135ec12a157b0317985b31d7.json  query-4734ffcffab2620af1dd947ee9fa0af96a172b8dc53c0159279ad4efc1c110e7.json  query-49898362735ecdad69ab8e476a2225c27c992b70f4b678d8f66b2600d5b0e3b9.json  query-4a5a68db649ec775d09ee0919575b8d0354ae8b28e3985c4c3f479d678461d46.json  query-502c2c85ba187ad8b5fac3cb3896b7f3c48b0ed166f39217d03f68dd92e0a6b0.json  query-56589ff6f4c19062baa14ded427ee0f63dfb2497110b73a7bc469c15f35a5e78.json  query-604b06afbd451bbd8054a2b14aeaca010b868eb10a0bfe2a24730e7f3df2ff1a.json  query-697e1192f4e4e285a3d42e2c59ee2645008af89f49e3b1e4479ea77086e1e7c8.json  query-7e671f5f531665c7fdd303cdf0f85e32fac437473d24cdb075911302737421e1.json  query-937c762caad11bd1e602eeb9c5b14bcb37041ee20f92186df1052e95521907a0.json  query-9b6ad2dc1bb83f936a2ed1d84ac996aa04b5830a8c3a1186c1d0751b37503d63.json  query-9b9a1ad564e6325facc42dcda58c8e09ca67ecafd27ab541f864b339dd283e4d.json  query-b44d3de64e22d1b3ab5df521bccaf305b744fc2191a55d8b2e9f7d35b923f280.json  query-b54d2cd363820c0b686d9808a67f3a6e72afe575d9570bc92ef270877669e10b.json  query-cdbce44e331176f679b4989a0dc534d7f184357457370dcb015ea7ea8fad4b4c.json  query-ce15295e2b8e1a09afbd1c900d1f68d92f8b9598f80ebbbc05d52a992b28131e.json  query-d1bf64fe44e126760a6248133d5eb0ccd49e68b4b0c78208289f89e71606f3d6.json  query-d8b13daf4cfa3d54b0975d9cec728c47c25f1fef83958dedd4d250f28388f772.json  query-dcec95fa7f3689947ad810dedf36f2e6685f36861adac3c25f358941291b3463.json  query-e397c13b3575189170cdacdcf6b16069047c89ce80da5b41e49adbe75ec4ca9c.json  query-fac09672da8af46d1d5674466517318d2404ba50ed2a9f66b48bcc61132bbc34.json  query-fc4208a40492f66093d3a6b0a2a202d0862585350fd9253cb5152f68f3953999.json  query-fc6ad64d3d20eb54ccc4c026267936aa28be8fde5b8257a7ca8fedc045b8d5e6.json  query-fe2131b7c511356230a9f83d805ac2f5fba2980170791fc7cb3f9288e525e5ef.json
metamuses-api/benches/: inference_bench.rs
metamuses-api/deploy/: .env.production  deploy.sh  metamuse-server.service  metamuse-worker@.service  run-workers.sh
metamuses-api/deployment/: README.md
metamuses-api/deployment/docker/: .env.example  Dockerfile  docker-compose.production.yml
metamuses-api/deployment/monitoring/: prometheus.yml
metamuses-api/deployment/monitoring/grafana/dashboards/: dashboard.yml
metamuses-api/deployment/monitoring/grafana/datasources/: prometheus.yml
metamuses-api/deployment/nginx/: api.metamuses.xyz.conf
metamuses-api/deployment/scripts/: backup.sh  deploy.sh  restore.sh  setup-server.sh
metamuses-api/migrations/: 20250101000001_initial_schema.sql  20250108000001_interaction_stats.sql  20251205000001_points_system.sql  20251205000002_twitter_verification.sql  20251208000001_add_muse_id_and_privacy.sql  20251208000002_add_luna_the_mystic.sql  20260107000001_lore_and_instructions.sql
metamuses-api/scripts/: README.md  download-models.py  download-models.sh
metamuses-api/src/: config.rs  lib.rs  types.rs
metamuses-api/src/api/: analytics_handlers.rs  auth.rs  companion_chat_handlers.rs  companion_handlers.rs  handlers.rs  instruction_handlers.rs  middleware.rs  mint_handlers.rs  mod.rs  points_handlers.rs  twitter_handlers.rs  types.rs  websocket.rs
metamuses-api/src/cache/: mod.rs  semantic.rs
metamuses-api/src/db/: companions.rs  messages.rs  mod.rs  pool.rs  users.rs
metamuses-api/src/inference/: engine.rs  llama_engine.rs  mod.rs  models.rs  worker_pool.rs
metamuses-api/src/models/: companion.rs  fact.rs  message.rs  mod.rs  user.rs
metamuses-api/src/plugins/: plugin_system.rs
metamuses-api/src/points/: leaderboard_service.rs  mod.rs  points_service.rs  repository.rs  task_registry.rs  twitter_service.rs
metamuses-api/src/points/tasks/: daily_checkin.rs  mod.rs  twitter_tasks.rs
metamuses-api/src/queue/: mod.rs  redis_manager.rs
metamuses-api/src/routing/: complexity.rs  intelligent_router.rs  mod.rs
metamuses-api/src/services/: companion.rs  fact_extractor.rs  instructions.rs  interaction_stats.rs  memory.rs  mod.rs  personality.rs  personality_builder.rs  semantic_memory.rs  traits_gen.rs
metamuses-web/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
metamuses-web/public/: onlook-preload-script.js
metamuses-web/public/sounds/: README.md
metamuses-web/src/__tests__/: emotion-detection.test.ts  setup.ts
metamuses-web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sw.ts
metamuses-web/src/components/: Footer.tsx  Header.tsx  InstructionsEditor.tsx  PWAInstallPrompt.tsx  SoundToggle.tsx  TipModal.tsx
migrations/: 20251205000001_points_system.sql
(+57 files in other folders)
