[package]
name = "metamuses-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alith AI Framework
# Note: Using default-features = false to avoid llama-cpp-2 which has ARM64 build issues
# The llama-cpp-2 crate has c_char type mismatch on ARM64 Linux (u8 vs i8)
alith = { git = "https://github.com/0xLazAI/alith", default-features = false, features = ["ipfs", "fastembed", "qdrant"] }

# Candle ML framework for inference (replaced llama-cpp-2 due to Metal hang issues)
# Note: Metal feature removed for Linux ARM64 compatibility (objc_exception build error)
# Metal is only available on macOS - use CPU inference on Linux
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.3"

# Async Runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web Framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Vector Database & Embeddings
qdrant-client = "1.13"
fastembed = "4.9"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Utilities
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
lazy_static = "1.5"
rand = "0.8"
regex = "1.11"

# Existing MetaMuse dependencies
ethers = { version = "2.0", features = ["abigen", "rustls"] }
sha256 = "1.0"
sha3 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"

[[bin]]
name = "metamuse-server"
path = "src/bin/server.rs"

[[bin]]
name = "metamuse-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "test-inference"
path = "src/bin/test_inference.rs"

[[bench]]
name = "inference_bench"
harness = false
